syntax = "proto3";
option go_package = "github.com/jeffreylean/goraft/proto;goraft";

package raft;

service RaftService {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

message AppendEntriesRequest {
        int64 term = 1; 
        int64 leaderId = 2;
        int64 prevLogIndex = 3;
        repeated LogEntry entries = 4;
        int64 leaderCommit = 5;
        int64 prevLogterm = 6;
}

message AppendEntriesResponse {
        int64 term = 1; 
        bool success = 2;
}

message LogEntry {
        int64 index = 1;
        int64 term = 2; 
        string command = 3; 
}

message RequestVoteRequest {
        int64 term = 1; 
        int64 candidateId = 2;
        int64 lastLogIndex = 3;
        int64 lastLogTerm = 4;
}

message RequestVoteResponse {
        int64 term = 1; 
        bool voteGranted = 2;
}
